...
        nameLabel.textColor = .YPWhite
        loginNameLabel.font = .systemFont(ofSize: 13)
        loginNameLabel.textColor = .YPGray
        descriptionLabel.font = .systemFont(ofSize: 13)
        descriptionLabel.textColor = .YPWhite
        exitButton.setImage(UIImage(named: "logout_button"), for: .normal)
        exitButton.accessibilityIdentifier = "logout button"
        exitButton.tintColor = .YPRed
        
    }
    
    func makeConstraints() {
        avatar.translatesAutoresizingMaskIntoConstraints = false
...
